[package]
name = "nq"
version = "0.1.0"
authors = ["anekos <anekos@snca.net>"]
repository = "https://github.com/anekos/nq"
keywords = []
license-file = "LICENSE"
readme = "README.md"
description = "nq"

[[bin]]
name = "nq"
doc = false

[dependencies]
docopt = "*"
encoding = "*"
quick-csv = "*"
rusqlite = "*"
serde = "1.0"
serde_derive = "1.0"
